# rumoo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: config.rs  main.rs  version.rs
src/algorithms/: mod.rs
src/algorithms/base/: genetic.rs
src/algorithms/moo/: mod.rs  nsga2.rs
src/core/: algorithm.rs  callback.rs  crossover.rs  duplicate.rs  evaluator.rs  individual.rs  infill.rs  initialization.rs  mating.rs  mod.rs  mutation.rs  operator.rs  population.rs  problem.rs  repair.rs  result.rs  sampling.rs  selection.rs  survival.rs  termination.rs
src/functions/: mod.rs  non_dominated_sorting.rs  pruning_cd.rs
src/indicators/: distance_indicator.rs  gd.rs  igd.rs  mod.rs
src/indicators/hv/: mod.rs
src/operators/: mod.rs
src/operators/selection/: tournament.rs
src/operators/survival/: mod.rs
src/operators/survival/rank_and_crowding/: classes.rs  metrics.rs  mod.rs
src/termination/: cv.rs  default.rs  delta.rs  fmin.rs  ftol.rs  max_eval.rs  max_gen.rs  max_time.rs  mod.rs  robust.rs  xtol.rs
src/util/: dominator.rs  misc.rs  mod.rs  normalization.rs  optimum.rs  randomized_argsort.rs  sliding_window.rs
src/util/display/: column.rs  display.rs  mod.rs  multi.rs  output.rs  progress.rs  single.rs
src/util/nds/: fast_non_dominated_sort.rs  mod.rs  non_dominated_sorting.rs
