[package]
name = "rumoo"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
float-ord = "0.3.2"
lazy_static = "1.5.0"
ndarray = "0.17.2"
rand = "0.10.1"
rand_distr = "0.6.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.0", features = ["fs", "macros", "rt-multi-thread"] }
